<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        app:showAsAction="never"></item>

    <item
        android:id="@+id/app_change"
        android:title="@string/change"
        android:orderInCategory="100"
        app:showAsAction="never"></item>

    <item
        android:id="@+id/app_add"
        android:title="@string/add"
        android:orderInCategory="100"
        app:showAsAction="never"></item>

    <item
        android:id="@+id/app_settings"
        android:title="@string/settings"
        app:showAsAction="never"></item>

    <item
        android:id="@+id/app_name_restoran"
        android:title="@string/restoran_name"
        app:showAsAction="never"></item>

    <item
        android:id="@+id/app_addres_restoran"
        android:title="@string/restoran_addres"
        app:showAsAction="never"></item>

    <item
        android:id="@+id/app_about"
        android:title="@string/about"
        android:icon="@drawable/ic_info_black_24dp"
        app:showAsAction="never"></item>

    <item
        android:id="@+id/action_refresh"
        android:title="@string/refresh"
        android:icon="@drawable/ic_sync_black_24dp"
        app:showAsAction="ifRoom" ></item>

</menu>