<?xml version="1.0" encoding="utf-8"?>

<!-- RelativeLayout layouts views relative to one another and/or relative to the parent view. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name"
        android:layout_below="@+id/app_bar"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_name"
        android:text="@string/description" />

    <TextView
        android:id="@+id/tv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_description"
        android:text="@string/category" />

    <Spinner
        android:id="@+id/sp_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_category"/>

    <TextView
        android:id="@+id/tv_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentRight="true"
        android:layout_below="@id/sp_category"
        android:text="@string/ingredients" />

    <TextView
        android:id="@+id/tv_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_ingredients"
        android:text="@string/calories" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_calories"
        android:text="@string/prise" />


    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tv_price"/>



</RelativeLayout>